--- a/notebooks/tutorial.ipynb
+++ b/notebooks/tutorial.ipynb
@@ -46,22 +46,7 @@
     "\n",
     "So, to get real acceleration vector, we need to normalize the measurement, by applying scaling and offset.\n",
     "\n",
-    "$a_{XYZ}= m_{a} \\cdot A_{XYZ}+b_{a} \\pm n_{a},$\n",
-    "\n",
-    "from the formula\n",
-    "\n",
-    "$A_{{XYZ}_i} =  (a_{XYZ} - b_{a})/ m_{{a}_i}$\n",
-    "<!-- \n",
-    "From the random angles roll, pitch, yaw, a transformation matrix is formed from the XYZ SCS to the ENU LCS:\n",
-    "\n",
-    "$C_{XYZ}^{ENU}=\\begin{vmatrix} cy\\cdot cp &-cr\\cdot sy+sr\\cdot cy\\cdot sp &sr\\cdot sy+cr\\cdot cy\\cdot sp \\\\ sy\\cdot cp &cr\\cdot cy+sr\\cdot sy\\cdot sp & -sr\\cdot cy+cr\\cdot sy\\cdot sp \\\\ -sp &sr\\cdot cp &cr\\cdot cp \\end{vmatrix},$\n",
-    "\n",
-    "where $cr=\\cos (roll)$, $sr=\\sin(roll)$, $cp=\\cos(pitch)$, $sp=\\sin(pitch)$, $cy=\\cos(yaw)$ , $sy=\\sin(yaw)$.\n",
-    "Using this matrix, you can obtain an expression for the true accelerations in the SSC:\n",
-    "$A_{XYZ}=\\left ( C_{XYZ}^{ENU} \\right )^{T}\\cdot \\begin{vmatrix} 0\\\\ 0\\\\ -1\\\\ \\end{vmatrix},$\n",
-    "\n",
-    "\n",
-    "$\\begin{vmatrix} 0\\\\ 0\\\\ -1\\\\ \\end{vmatrix}$ is a vector defining the direction of gravitational acceleration, expressed in units of g, ${(C_{XYZ}^{ENU} )}^{ T}$ is the coordinate transformation matrix from LCS to SCS (inverse to the transformation matrix from SCS to LCS). -->"
+    "$a_{XYZ}= m_{a} \\cdot A_{XYZ}+b_{a} \\pm n_{a},$"
    ]
   },
   {
@@ -280,6 +265,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find noise form calibrated data as RMSE\n",
+    "\n",
+    "sigma = ..."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -312,6 +308,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Recalculate the magnetometer data according to the local coordinate frame\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Check the results via plotting the graphs"
    ]
   },
@@ -335,13 +339,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Using the formulas, calculate roll, pitch, yaw\n",
+    "# Task 3 Using the formulas, calculate roll, pitch, yaw\n",
     "\n",
     "$roll'=atan \\left ( \\frac{a_{Y}}{a_{Z}} \\right ),$\n",
     "\n",
     "$pitch'=atan\\left ( \\frac{-a_{X}}{\\sqrt{a_{Y}^{2}+a_{Z}^{2}}} \\right ).$\n",
     "\n",
-    "$yaw'=atan2\\left ( \\frac{m_{Y'}}{m_{X'}} \\right ).$"
+    "$yaw'=atan2\\left ( \\frac{m_{Y'}}{m_{X'}} \\right ).$\n",
+    "\n",
+    "From the random angles roll, pitch, yaw, a transformation matrix is formed from its own XYZ coordinate system to the local ENU coordinate system:"
    ]
   },
   {
@@ -350,6 +356,14 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Check the yaw and roll/pitch correctness\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
